封装子组件实现轮播图效果

--- a/pages/shop/shop.wxml
+++ b/pages/shop/shop.wxml
@@ -1,2 +1,3 @@
-<!--pages/shop/shop.wxml-->
-<text>pages/shop/shop.wxml</text>
+<view class="container">
+  <i-swiper data="{{bannerData}}"></i-swiper>
+</view>
