封装扫码组件以及调用扫码接口并封装跳转方式和添加购物车方法

--- a/pages/shop/shop.wxml
+++ b/pages/shop/shop.wxml
@@ -1,3 +1,6 @@
 <view class="container">
+  <!-- 轮播图 -->
   <i-swiper data="{{bannerData}}"></i-swiper>
+  <!-- 扫码按钮 -->
+  <i-code-button bind:getResult="getShopCode"></i-code-button>
 </view>
