--- a/pages/shop/shop.wxml
+++ b/pages/shop/shop.wxml
@@ -2,5 +2,5 @@
   <!-- 轮播图 -->
   <i-swiper data="{{bannerData}}"></i-swiper>
   <!-- 扫码按钮 -->
-  <i-code-button bind:getResult="getShopCode"></i-code-button>
+  <i-code-button type="circle" bind:getResult="getShopCode"></i-code-button>
 </view>
