--- a/pages/cart/cart.wxss
+++ b/pages/cart/cart.wxss
@@ -1,1 +1,101 @@
 /* pages/cart/cart.wxss */
+.container{
+  display: flex;
+  flex-direction: column;
+}
+.list{
+  padding-bottom : 181rpx;
+}
+.list-item{
+  border: 1rpx solid #ccc;
+  padding: 20rpx;
+}
+.item-sku{
+  color: #ccc;
+  margin: 10rpx 0;
+}
+.item-price{
+  color: #f60;
+}
+.item-group{
+  display: flex;
+  justify-content:flex-end;
+  align-items: center;
+}
+.decrement ,.increment{
+  width: 60rpx;
+  height: 60rpx;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 55rpx;
+  box-sizing: border-box;
+  color : #fff;
+}
+.decrement{
+  border : 1rpx solid #FEBE1B;
+  color : #FEBE1B;
+}
+.increment{
+  background-color: #FEBE1B;
+}
+.count{
+  border: 2rpx solid #FEBE1B;
+  box-sizing: border-box;
+  height: 65rpx;
+  width: 150rpx;
+  text-align: center;
+  border-radius: 35rpx;
+  margin: 0 10rpx;
+  display: flex;
+  align-items: center;
+}
+.settle-ment{
+  position: fixed;
+  bottom : 0; 
+  left : 0; 
+  right : 0;
+}
+.total-price{
+  height : 80rpx;
+  line-height: 80rpx;
+  background-color: #fff;
+  border: 1rpx solid #eee;
+  padding : 0 20rpx;
+  color : #ccc;
+}
+.total-price .price{
+  margin-left: 10rpx;
+  color : #f60;
+}
+.button-group{
+  height : 100rpx;
+  display: flex;
+}
+.button-group view,.add{
+  flex : 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color : #fff;
+}
+.add{
+  background-color:  #FEBE1B;
+}
+.settle{
+  background-color: #f60;
+}
+.empty-cart{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.cartImage{
+  width: 400rpx;
+  height: 350rpx;
+  margin:50rpx 0;
+}
+.tips{
+  color : #ccc;
+  font-size: 40rpx;
+  margin-top: 200rpx;
+}
